fixed spacing issue on blog home

--- a/client/src/components/blog/general/postTile/postTile.scss
+++ b/client/src/components/blog/general/postTile/postTile.scss
@@ -10,6 +10,9 @@ $extra-dark: rgba(3, 51, 3, 0.493);
     margin-top: 30px;
     margin-bottom: 25px;
 }
+.tile-container{
+    margin: 0 auto;
+}
 .tile{
     box-sizing: border-box;
     margin: 16px;
